--- a/rootTreeTest/shared_lib/README
+++ b/rootTreeTest/shared_lib/README
@@ -1,4 +1,3 @@
-One has to specify the current folder as the search path for the dynamic libraries.
+One has to specify the current folder as the search path for dynamic libraries.
 
 export LD_LIBRARY_PATH=`pwd`:$LD_LIBRARY_PATH
-
